# YouLong_AUV_Control_System

./: .gitignore  .gitmodules  CLAUDE.md  README.md  note.md  uv_position.py
.github/agents/: .agent.md  auv_master.md  ros2-uuv-optimizer.agent.md  stonefish_master.agent.md
devlog/: 2026-07-05_status.md  2026-07-19_status.md  2026-07-21_status.md
docs/: debug_guide.md  hil_architecture.md  node_parameters.md  perception.md
src/datas/: uv_tasks_SAUVC2026.json
src/stonefish_ros2/: README.md  package.xml  sauvc_pool.scn
src/stonefish_ros2/Data/: fix_sensors.py  girona500auv_full copy.scn  sauvc_2026_finals.scn  sauvc_2026_finals_with girona.scn  sauvc_2026_qualification.scn  xunyun.scn
src/uv_bringup/: package.xml  setup.cfg  setup.py
src/uv_bringup/launch/: real_bringup.py  sim_bringup.py  sim_core.py
src/uv_control/: package.xml  setup.cfg  setup.py
src/uv_control/uv_control/: basic_motion.py  coordinate.py  coordinate_utils.py  minimal_control.py
src/uv_hm/: package.xml  setup.py
src/uv_hm/config/: pid_params.yaml
src/uv_hm/launch/: hm_launch.py
src/uv_hm/uv_hm/: sim_bridge.py  thrust_mixer.py
src/uv_msgs/: CMakeLists.txt  package.xml
src/uv_msgs/action/: BasicMotion.action
src/uv_msgs/msg/: PoseInfo.msg  Waypoint.msg
src/uv_nav/: package.xml
src/uv_nav/launch/: nav_launch.py
src/uv_nav/uv_nav/: navigator.py
src/uv_perception/: setup.cfg  setup.py
src/uv_perception/uv_perception/: position.py  vision.py
src/uv_task/: setup.cfg  setup.py
src/uv_task/config/: tasks.json
src/uv_task/launch/: task_launch.py
src/uv_task/uv_task/: task_runner.py
src/zit6_interfaces/: CMakeLists.txt  package.xml
src/zit6_interfaces/msg/: ZitSetpoint.msg  ZitStatus.msg
src/zit6_interfaces/srv/: GetParams.srv
visualization/: auv_visualizer.py  requirements.txt
workspace_auv/docs/: basic_motion_action.md  coordinate-design.md  debug_guide.md  devlog_line_follower.md  perception.md  wuurc_auv_task_runner.md
workspace_auv/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace_auv/log/: latest_build
workspace_auv/src/: zit6_interfaces
workspace_auv/src/uv_bringup/: setup.py
workspace_auv/src/uv_control/: setup.py
workspace_auv/src/uv_hm/: package.xml  setup.py
workspace_auv/src/uv_msgs/: CMakeLists.txt
workspace_auv/src/uv_msgs/action/: BasicMotion.action
workspace_auv/src/uv_msgs/msg/: Detection.msg  DeviceCommand.msg  LineState.msg  ObjectPosition.msg  ObjectPositionArray.msg  PidGains.msg  PidState.msg  PoseInfo.msg
workspace_auv/src/uv_msgs/srv/: ExecTask.srv  GetState.srv
workspace_auv/src/uv_nav/: setup.cfg  setup.py
workspace_auv/src/uv_perception/: GO2RTC.md  package.xml  setup.py
workspace_auv/src/uv_task/: package.xml  setup.py
workspace_auv/src/uv_task/config/: tasks.json  uv_tasks.json
workspace_auv/src/uv_task/launch/: task_launch.py
workspace_auv/src/uv_task/test/: test_wuurc_task_runner.py
workspace_auv/src/uv_task/uv_task/: arrow_surfacer.py  aruco_decoder.py  line_follower.py  task_runner.py
workspace_sim/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace_sim/log/: latest_build
workspace_sim/src/uv_sim/: package.xml  setup.py
workspace_sim/src/uv_sim/uv_sim/: sim_bridge.py
(+761 files in other folders)
