<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_xml_v3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zit6_interfaces</name>
  <version>0.0.1</version>
  <description>Custom interfaces for ZIT6 AUV</description>
  <maintainer email="doc049@todo.todo">doc049</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
