<?xml version="1.0"?>
<package format="3">
  <name>uv_sim</name>
  <version>0.1.0</version>
  <description>Simulation-only nodes for YouLong AUV</description>
  <maintainer email="origin@example.com">origin</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>stonefish_ros2</exec_depend>
  <exec_depend>zit6_interfaces</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
